# ayatana-indicator-systemtray

./: Makefile.am  README.md  configure.ac
data/: Makefile.am  org.ayatana.indicator.systemtray.gschema.xml.in.in
data/icons/: Makefile.am
debian/: changelog  control  copyright  rules
po/: POTFILES.in  POTFILES.skip  af.po  am.po  an.po  ar.po  ast.po  ayatana-indicator-systemtray.pot  az.po  be.po  bem.po  bg.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ckb.po  co.po  crh.po  cs.po  cv.po  cy.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fil.po  fo.po  fr.po  (+80 more)
src/: Makefile.am  indicator-systemtray.c  na-tray.c
